Updated my work

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
+                     <li><a href="studies.html">Studies</a></li>
                 </ul>
             </nav>
         
@@ -82,13 +83,12 @@
                     <img src="https://scontent-dfw5-2.cdninstagram.com/vp/d3fe126d6eaf5f266c89608018a88d08/5CA1A9DE/t51.2885-19/s150x150/44376495_979684735537741_468227073933049856_n.jpg?_nc_ht=scontent-dfw5-2.cdninstagram.com" border="5">
                 </div>
                 
-                <div class ="content">
-                    <h1>Georrell L. Jones</h1>
-                    <p>Student at Operation Spark</p>
-                    <section class="interests:">
-                        <header>Interests:</header>
-                       <ul> 
-                           <li>Developing Businesses</li>
+                <div class="content">
+                    <header>Georrell L. Jones</header>
+                    <p>Optimist at Operation Spark</p>
+                    <section class="interests">
+                        <header>Interests</header>
+                       <ul>
                            <li>Spending Time w/ My Family</li>
                            <li>Watching Movies</li>
                            <li>Traveling</li>
