--- a/portfolio.html
+++ b/portfolio.html
@@ -85,6 +85,8 @@
                         </li>
                         <li><a href="portfolio.html">Portfolio</a>
                         </li>
+                         <li><a href="studies.html">Studies</a>
+                         </li>
                     </ul>
                 </nav>
                 <main>
